--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^8.6.0",
     "express": "^4.18.1",
     "express-jwt": "^6.0.0",
